--- a/app/views/static_pages/advancedtechnology.html.erb
+++ b/app/views/static_pages/advancedtechnology.html.erb
@@ -9,12 +9,21 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Orthophos XG 5</h3>	<%= image_tag 'orthophos.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Orthophos XG 5</h3>	
+				</div>
+				<div class="span7">
+					<%= image_tag 'orthophos.jpg' %>
+				</div>
+			</div>
 			<p>
 				Reflective of TLC’s cutting edge technology is the Orthophos XG 5 made by Sirona, a company that traces its lineage to the first manufacturer of X-ray equipment. A premier instrument of “panorex” imaging, the Orthophos XG 5 embodies this Sirona heritage. Its CAN bus technology and high speed interface deliver ultra fast performance and its CCD sensors provide high quality panorex images. In turn, these exceptional digital images enhance the distinctive dental treatments of TLC.<br>
-
+			</p>
+			<p>
 				The Orthophos XG 5 also enhances the safety of our patients. Its horizontal scanning sensor captures each portion of an image in a fraction of a second, thereby providing maximum image resolution of the resulting digital image.<br>
-
+			</p>
+			<p>
 				Not only is the Orthophos XG 5 safe and quick, it also is friendly. Its three point positioning assures the comfort of TLC patients. So amazing and reassuring are its dimensions that our patients often feel as though they are at the helm of the Starship Enterprise.	
 			</p>		
 		</div>
@@ -24,10 +33,19 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>USBCAM2 Intraoral Camera</h3>	<%= image_tag 'usbcam.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>USBCAM2 Intraoral Camera</h3>
+				</div>	
+				<div class="span7">
+					<%= image_tag 'usbcam.jpg' %>
+				</div>
+			</div>
+
 			<p>
 				The USBCAM2 is the newest hand-held intraoral camera from Schick Technologies and is a marvelous dental communication tool. It provides still frame photos and full motion videos with superb color and VGA resolution that enable TLC dentists, hygienists, and patients to partner in reviewing present and post treatment conditions.<br>
-
+			</p>
+			<p>
 				Elegant, with slim, smooth contours and small head profile, the USBCAM2 allows for ease of use and operation. So wondrous is the USBCAM2 that we sometimes think of it as a magic wand providing clarification and comfort to our patients.
 			</p>		
 		</div>
@@ -37,10 +55,18 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Provecta 70 Intraoral X-Ray</h3>	<%= image_tag 'xray.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>Provecta 70 Intraoral X-Ray</h3>	
+				</div>
+				<div class="span7">
+					<%= image_tag 'xray.jpg' %>
+				</div>
+			</div>
 			<p>
 				The Provecta 70 Intraoral X-Ray comes to us from Air Techniques, a leader in optimized imagery. Ergonomically engineered for precise positioning and stability, it provides unrivaled sets of intraoral x-rays, the roadmaps to our patient’s dental health.<br>
-
+			</p>
+			<p>
 				Vested with the most advanced digital technology, the Provecta 70 significantly improves diagnostics and greatly reduces exposure. And by employing a re-usable semi-conductor device to capture images, it eliminates the need for x-ray film and toxic chemicals thereby contributing to the health and safety of our patients and our environment. Indeed, so bountiful are its benefits that when the Provecta 70 rolls on its wheels we affectionately call it “Wall-E.”
 			</p>		
 		</div>
@@ -50,10 +76,18 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Polus Whitening Accelerator</h3>	<%= image_tag 'whiteningmachine.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>Polus Whitening Accelerator</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'whiteningmachine.jpg' %>
+				</div>
+			</div>
 			<p>
 				The Polus Whitening Accelerator by Byeond Dental is the ultimate in tooth whitening technology. Its distinctive LightBridge system combines halogen and LED light sources for superior whitening power while advanced filtration ensures patient safety by removing all harmful heat and ultraviolet output. Three flexible settings tailr the treatment to a patient’s tooth sensitivity level and a detachable LED curing light enables spot whitening of a single tooth.<br>
-
+			</p>
+			<p>
 				A Polus Whitening Treatment consits of three safe and successive 10 minute sessions that lighten teeth by 3 to 8 shades. By comparision, drugstore whitening products require weeks of risk laden treatment to lighten teeth by 1 shade. So quick and transformative are the powers of our Polus Whitening Accelrator that we like it to Cinderellla’s Fiary Godmother.
 			</p>		
 		</div>
@@ -63,7 +97,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Cavitron Jet Plus</h3>	<%= image_tag 'jetplus.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">					
+					<h3>Cavitron Jet Plus</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'jetplus.jpg' %>
+				</div>				
+			</div>
 			<p>
 				The Cavitron Jet Plus by Dentsply is dentistry’s most advanced ultrasonic scaling and polishing unit. Extended SPS technology provides the Cavitron Jet Plus with tip “cruise control” that is adjustable by means of a wireless foot control. When comfortable cavitation is completed, a final Rinse Mode provides a refreshing water flush that is followed by a resplendent polishing. So transformative is the painless Cavitron Jet Plus that we think of it as a deluxe car wash in dental guise. The patient just sits back and enjoys the ride while the darkness of a Syracuse winter is washed away and a radiant smile emerges.
 			</p>		
@@ -74,7 +115,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Odyssey Navigator Diode Laser</h3>	<%= image_tag 'diodelaser.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">					
+					<h3>Odyssey Navigator Diode Laser</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'diodelaser.jpg' %>
+				</div>				
+			</div>				
 			<p>
 				The Odyssey Navigator by Ivoclar Vivadent is a patient-friendly diode laser that is ideally suited for soft-tissue procedures. While completing many procedures immediately and without pain, the Navigator concurrently decontaminates and greatly expedites healing. It also effectively treats cold sores and fever blisters. So celestial is the Navigator that we sometimes think of it as a “lightsaber” and of ourselves as Luke Skywalker.
 			</p>		
@@ -85,7 +133,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Eaglesoft</h3>	<%= image_tag 'eaglesoft.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>Eaglesoft</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'eaglesoft.jpg' %>
+				</div>				
+			</div>							
 			<p>
 				Eaglesoft is the invisble hand that guides our computers and our Orthophos. This state of the art software by Patterson not only orchestrates our equipment but also provides our practice and patients with instant access to dental records. So integral to our office is Eaglesoft, that we consider it a member of the staff and call it Happy Hal. 
 			</p>		
@@ -96,7 +151,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Panasonic TC-L32C22 HDTV</h3>	<%= image_tag 'tv.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>Panasonic TC-L32C22 HDTV</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'tv.jpg' %>
+				</div>				
+			</div>
 			<p>
 				Every treatment room of our TLC office has a 32 inch Panasonic TC-L32C22 HDTV attached to an expandable wall mount. The TC-L32C22 is a top of the line HDTV that serves as a computer monitor and that brings striking clarity to the dental images produced by its room companions. Its dimensions, resolution, and expandability enable both patient and practitioner to review carefully the state of the art images upon which treatments are predicated. And it transforms treatment rooms into cinemas in which our patients are the screen stars. 
 			</p>		
