--- a/app/views/static_pages/amenities.html.erb
+++ b/app/views/static_pages/amenities.html.erb
@@ -10,7 +10,7 @@
 	<div class="span12">
 		<div class="content-container">
 			<p>
-				You are first aware of the distinctiveness of the TLC Dental group when you are heralded by our landmark toothbrush mailbox. As you drive into our equally unique courtyard and its seasonal landscaping, you already enjoy a sense of well being. 
+				You are first aware of the distinctiveness of the TLC Dental group when you are heralded by our landmark toothbrush mailbox. As you drive into our equally unique courtyard and its seasonal landscaping, you already enjoy a sense of well being.<br> 
 			</p>
 			<p>
 				Our Greeting Room then awaits both old and new pateints who are warmly welcomed by our staff.
