--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row-fluid">
 	<div class="span12">
-		<div class="content-container">
+		<div class="content-container" style="display:block;">
 			<%= image_tag 'pocketwatch.jpg', :class => "float-right" %>	
 			<h3>Office Hours</h3>			
 			<table>
@@ -20,7 +20,8 @@
 					<td>Friday</td>
 					<td>8:30am-12pm</td>
 				</tr>
-			</table>			
+			</table>	
+			<br><br><br><br>		
 		</div>
 	</div>
 </div>
