--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -9,7 +9,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>The Art of Gentle Dentistry</h3> <%= image_tag 'cowardlylion.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">
+					<h3>The Art of Gentle Dentistry</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'cowardlylion.jpg' %>
+				</div>
+			</div>
 			<p>
 				For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
 			</p>				
@@ -20,7 +27,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Comforting Staff</h3> <%= image_tag 'cowardlylion.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Comforting Staff</h3>
+				</div>
+ 				<div class="span7">
+ 					<%= image_tag 'cowardlylion.jpg' %>
+ 				</div>
+			</div> 				
 			<p>
 				Foremost in providing for your dental comfort are the dentists and hygienists of TLC. The exacting standards of Dr. Rothenberg are reflected in the welcoming manner and understanding demeanor of our staff. Their compassion and tender care assure the comfort of your dental treatment.
 			</p>				
@@ -31,7 +45,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Comforting Ambiance</h3> <%= image_tag 'cowardlylion.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Comforting Ambiance</h3> 
+				</div>
+				<div class="span7">
+					<%= image_tag 'cowardlylion.jpg' %>
+				</div>
+			</div>
 			<p>
 				Our treatment rooms are imbued with inviting warmth. The harmonies of feng shui are found in lightness, in the beauty of flowers, in the naturalness of plants. Serenity is found in meditation music that surrounds you.
 			</p>				
@@ -42,7 +63,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Comforting Amenities</h3> <%= image_tag 'comfortingamenities.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Comforting Amenities</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'comfortingamenities.jpg' %>
+				</div>
+			</div>
 			<p>
 				Further comfort can be found in a soothing neck warmer, a relaxing back massager, a restful paraffin hand wax, and mesmerizing 920HR i-glasses.
 			</p>				
@@ -53,7 +81,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Comforting Canine</h3> <%= image_tag 'gentle_flossy.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Comforting Canine</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'gentle_flossy.jpg' %>
+				</div>
+			</div>
 			<p>
 				For patients of all ages who find comfort in “man’s best friend”, our most loveable staff member stands at the ready. Flossie is not only a wonderfully affectionate white Labrador, but she also is a certified therapy dog who likes nothing better than to comfort patients.
 			</p>				
@@ -64,7 +99,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Comforting Anesthetics</h3> <%= image_tag 'flowers.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Comforting Anesthetics</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'flowers.jpg' %>
+				</div>
+			</div>
 			<p>
 				Although abundant patient comfort is afforded by the tender care of our staff and by our relaxing ambiance and amenities, several anesthetics and analgesics are available to assure your comfort during treatment. 
 			</p>				
@@ -75,7 +117,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Comforting Sedation</h3> <%= image_tag 'sedation.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Comforting Sedation</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'sedation.jpg' %>
+				</div>
+			</div>
 			<p>
 				Sedation also appeals to many of our patients. We are pleased to offer them nitrous oxide as well as the increasingly popular “Walk in the Park” sedation.
 			</p>				
@@ -86,7 +135,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="content-container">
-			<h3>Comforting Commitment</h3> <%= image_tag 'beach.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">			
+					<h3>Comforting Commitment</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'beach.jpg' %>
+				</div>
+			</div>
 			<p>
 				For our staff, your care and comfort are inseparable, as wedded as sand and sea. We are committed to providing you with both optimal dental care and comfort.
 			</p>				
