--- a/app/views/static_pages/greendentistry.html.erb
+++ b/app/views/static_pages/greendentistry.html.erb
@@ -9,7 +9,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="green-content-container">
-			<h3>The Environmental Challenge</h3>	<%= image_tag 'environmentchallenge.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>The Environmental Challenge</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'environmentchallenge.jpg' %>
+				</div>				
+			</div>				
 			<p>
 				We live in an age of daunting ecological change; an age in which rain forests lose their trees, coral reefs lose their color, mountain tops lose their snow, and poles lose their ice. Attending these changes are the extinction of thousands of species of flora and fauna, the impending loss of thousands more, and the debilitation of our environment. These are bellwethers that summon us to protect and preserve our planet. 
 			</p>		
@@ -20,7 +27,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="green-content-container">
-			<h3>Green Dental Society</h3>	<%= image_tag 'small_gds_seal.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>Green Dental Society</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'small_gds_seal.jpg' %>
+				</div>				
+			</div>				
 			<p>
 				To address the environmental challenge of our time, Dr. and Mrs. Rothenberg co-founded the Green Dental Society, an international non-profit organization that promotes eco-friendly practices within the dental profession.
 			</p>		
@@ -31,7 +45,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="green-content-container">
-			<h3>Green Dental Society</h3>	<%= image_tag 'small_6R_logo.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>Green Dental Society</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'small_6R_logo.jpg' %>
+				</div>				
+			</div>					
 			<p>
 				Our ethos is expressed in the “6-R” mantra: “reduce, replace, remove, reuse, recycle, refresh” that is reflected in such practices as:<br>
 			</p>
@@ -81,7 +102,14 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="green-content-container">
-			<h3>The Green TLC Practice</h3>	<%= image_tag 'greenTLC.jpg' %>
+			<div class="row-fluid">
+				<div class="span5">				
+					<h3>The Green TLC Practice</h3>
+				</div>
+				<div class="span7">
+					<%= image_tag 'greenTLC.jpg' %>
+				</div>				
+			</div>				
 			<p>
 				As founders of TLC and of the Green Dental Society, we proudly follow and promote policies that protect our planet. With ceilings lighted by fluorescent bulbs and designer flooring made from recycled material, our office is eco-friendly from top to bottom. We strive to care for both patient and planet by conserving water and energy, recycling waste, and preventing pollution.
 			</p>		
