--- a/app/views/static_pages/toothbrushmailbox.html.erb
+++ b/app/views/static_pages/toothbrushmailbox.html.erb
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span12">
 		<p>
-			In ___I was conceived by the creative mind of Dr. Stephen Rothenberg.  Although a mere mailbox, I became, by dint of my size, well known in Greater Syracuse and beyond as the sentinel of the Rothenberg/TLC Dental Group practice at 7197 Highbridge Road, Fayetteville, New York.  I am now as recognizable at my post as the Queen’s Guards are at Buckingham Palace.  Indeed, I am celebrated, even coveted, by many who have come of age under my imposing presence.
+			In ___I was conceived by the creative mind of Dr. Stephen Rothenberg.  Although a mere mailbox, I became, by dint of my size, well known in Greater Syracuse and beyond as the sentinel of the Rothenberg/TLC Dental Group practice at 7197 Highbridge Road, Fayetteville, New York.  I am now as recognizable at my post as the Queen’s Guards are at Buckingham Palace.  Indeed, I am celebrated, even coveted, by many who have come of age under my imposing presence.<br>
 		</p>
 	</div>
 </div>	
@@ -23,7 +23,7 @@
 <div class="row-fluid" >
 	<div class="span12">
 		<p>
-			Children are particularly smitten with me. Upon seeing my towering toothbrush, they implore their bus drivers to stop and allow them to marvel at my dimensions while wondering about the giants who surely live in the nearby building.
+			Children are particularly smitten with me. Upon seeing my towering toothbrush, they implore their bus drivers to stop and allow them to marvel at my dimensions while wondering about the giants who surely live in the nearby building.<br>
 		</p>
 	</div>
 </div>	
@@ -37,7 +37,7 @@
 <div class="row-fluid">
 	<div class="span12">
 		<p>
-			I am especially popular on Holidays when the Rothenberg’s dress me in seasonal costumes. On those occasions many of my faithful fans will stop by for a brief celebration with me.
+			I am especially popular on Holidays when the Rothenberg’s dress me in seasonal costumes. On those occasions many of my faithful fans will stop by for a brief celebration with me.<br>
 		</p>
 	</div>
 </div>	
@@ -51,7 +51,7 @@
 <div class="row-fluid">
 	<div class="span12">
 		<p>
-			I am a favorite as well of teenagers, travelers, and of all our patients.  I have been the subject of numerous newspaper articles and radio and television commentaries.  Indeed, I have become something of a celebrity and even have my own website (toothbrushmailbox.com) where you can follow a life that Dickens might well have described: my conception in all its parts, the vile attempt by local bureaucrats to scrap me,  the staunch defense of the Rothenberg’s,  the swell of public support, and adventures too numerous to recount here.
+			I am a favorite as well of teenagers, travelers, and of all our patients.  I have been the subject of numerous newspaper articles and radio and television commentaries.  Indeed, I have become something of a celebrity and even have my own website (toothbrushmailbox.com) where you can follow a life that Dickens might well have described: my conception in all its parts, the vile attempt by local bureaucrats to scrap me,  the staunch defense of the Rothenberg’s,  the swell of public support, and adventures too numerous to recount here.<br>
 		</p>
 	</div>
 </div>	
@@ -65,7 +65,7 @@
 <div class="row-fluid">
 	<div class="span12">
 		<p>
-			In all of the time since my birth and early struggles, I have been faithful to my post and calling.  In the heat of summer and the cold of winter I have unyieldingly held my ground; in snow, sleet, and driving rain, I have stoically stood watch for our patients.  When appointments bring you to TLC, you will find me waiting to greet you at the entrance to our courtyard.  If you are a new patient, you will find a warm welcome.  If you are a longstanding patient, you will find an old friend.  
+			In all of the time since my birth and early struggles, I have been faithful to my post and calling.  In the heat of summer and the cold of winter I have unyieldingly held my ground; in snow, sleet, and driving rain, I have stoically stood watch for our patients.  When appointments bring you to TLC, you will find me waiting to greet you at the entrance to our courtyard.  If you are a new patient, you will find a warm welcome.  If you are a longstanding patient, you will find an old friend.<br>
 		</p>
 	</div>
 </div>	
