--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,21 @@
-<div class="row-fluid">
-	<div class="span2">
-		<%= image_tag 'dreamsmiles-btn.png' %>
+<div class="row-fluid" style="text-align:center;">
+	<div class="span3">
+		<%= link_to image_tag( 'dreamsmiles-btn.png'), 'dreamsmiles' %>
 	</div>
-	<div class="span2 offset8">
+	<div class="span3 offset6">
 		<%= image_tag 'socialmedia-btn.png' %>
 	</div>
 </div>
-<div id="welcome-text">
+<div class="welcome-text">
 	<div class="row-fluid">
 		<div class="span12">
 			<h3 style="text-decoration:underline">Welcome to TLC</h3><h4>TLC is many facets of care.</h4>
-			<p>
+		</div>
+	</div>
+<div id="left-welcome">
+	<div class="row-fluid">
+		<div class="span6 offset4">
+			<p style="margin-left: -25px;">
 				TLC is Art expressed by our Toothbrush Mailbox<br>
 				TLC is Comfort in the relaxed ambiance of our office<br>
 				TLC is Gentle care for your peace of mind<br>
@@ -18,6 +23,12 @@
 				TLC is Robust Health from a full range of services<br>
 				TLC is Modern Technology for optimum treatment<br>
 			</p>
+		</div>
+	</div>
+</div>
+<div class="welcome-text">
+	<div class="row-fluid">
+		<div class="span12">
 			<h4>
 				We at TLC warmly welcome you to<br>
 				our family of staff and patients.
